1976 [XviD] custom commandline values have precedence
     [XviD] if possible -par x:y will be replaced with -par z
1975 [OneClick] removed resolution adjustement for AVC level enforcement
1974 [JobQueue] renamed column "codec" to "encoder"
1973 [Video Encoding] fixed not applying zones in first pass. Bug #3188275
1972 [MKV Muxer] fixed non-forced idx subtitle handling
     [MKV Muxer] cosmetics 
1971 [OneClick] corrected output height if autocrop is disabled
1970 [Update] some adjustements
1969 [Main Window] if video input avs file has also audio included add this file as audio track, too. Feature request #2918470
1968 [MKV Muxer] added forced track flag for subtitles
1967 [Update] save/restore size, location and column locations. Feature request #3079391
1966 [Worker] corrected wiki link. Patch by XhmikosR (#3186982)
1965 [Update] fixed a problem with the Nero AAC encoder update detection
     [Update] fixed a crash
1964 [Update] default window size changed
1963 [Update] removed treeview on the left side so that the update data itself is better visible
1962 [Update] only the files which need an update are shown. if no file needs an update all files are shown.
     [Update] added a checkbox to show all files
1961 [AVS Cutter] update start/end frame when a section is clicked. Feature request #1660341
1960 [Main Window] initial starting window opens in the visible area taking the taskbar into account. Feature request #2821392
     [VideoPlayer] taking taskbar into account, too
1959 [Main Window] disabled maximize button. Feature request #2727670
1958 [Audio Encoder] encoding job can be added regardless of the input file status
1957 [Update] added update check for the Nero AAC encoder part II
1956 [Update] added update check for the Nero AAC encoder
1955 [One-Click] added status of the source detection to the progress window
1954 [Audio Encoder] fixed audio detection crash
1953 [Job] enhanced message in case a job is already aborted